--- a/app/views/alerts/index.html.haml
+++ b/app/views/alerts/index.html.haml
@@ -1,26 +1,19 @@
 - content_for :sidebar do
-  %h1 Configure your Alerts
+  %h1 Receive alerts via
   - if !@archieved
     - semantic_form_for [@project, @notification] do |f|
-      = f.check_box :is_email
-      %span.gray
-        Emails
-      %br
-      = f.check_box :is_sms
-      %span.gray
-        SMS
-      %br
-      %br
-      - #&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      .gray
+        = f.check_box :is_email
+        = f.label :is_email, "Email"
+        %br
+        = f.check_box :is_sms
+        = f.label :is_sms, "SMS"
       = f.submit " Update ", :style=>"width:80px;"
   %br
   %h1 Filter Alerts
   = render :partial => "shared/learnmore"
   - form_tag project_alerts_path, :method => :get do
     = filter_html("alerts_index")
-%h2
-  Alerts
-%br
 = render :partial => "alerts/list"
 %br
 = will_paginate @alerts
