--- a/app/views/assets/_new.html.haml
+++ b/app/views/assets/_new.html.haml
@@ -1,4 +1,3 @@
-%br
 - semantic_form_for @asset, :url => [@project, @asset], :html => {:multipart => true , :class => "stack"}, :live_validations => true do |f|
   = error_messages_for :asset
   - f.inputs do
@@ -7,10 +6,7 @@
         = a.hidden_field :attachable_id
         = a.hidden_field :attachable_type
         = a.input :data, :as => :file, :label => false, :input_html => {:size => 20}
-  %br      
-  = f.submit "Upload"
-%br
-%span.gray
-  Max size 10 MB per file.
-  %br
-  Executable files not allowed.
+        %span.gray
+          %i
+            Max size 10 MB per file. Executable files not allowed.
+  = f.submit "Upload", :style => "width:80px;"
