--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     = javascript_include_tag 'jquery-1.4.2.min', 'jquery-ui-1.7.2.custom.min', 'jquery.colorbox-min', 'jquery.autocomplete.pack', 'jquery.validate.pack', 'application', :cache => "base"
     = javascript_include_tag 'jintastic'
   %body
-  
+    <LINK REL="SHORTCUT ICON" HREF="/images/websitelogo.png">  
     #container
       #header
         = render :partial => "layouts/top_bar"
