--- a/app/views/project_roles/index.html.haml
+++ b/app/views/project_roles/index.html.haml
@@ -1,15 +1,17 @@
 - content_for :sidebar do
   %h1
-    Project Members
+    Invite
+  .gray
+    Username or email of user who you are inviting
+  - if !@archieved 
+    - semantic_form_for [@project, @project.invitations.new] do |f|
+      - f.inputs do
+        = f.input :invitee, :label => false
+      - f.buttons do
+        = f.commit_button "Send Invitation"
+%h2
+  Project Members
 %br
-- if !@archieved 
-  - semantic_form_for [@project, @project.invitations.new] do |f|
-    - f.inputs do
-      = f.input :invitee, :label => "Invite new member", :hint => "Username or email of user who you are inviting"
-    - f.buttons do
-      = f.commit_button "Send Invitation"
-%br
-%br  
 %table.index
   - @roles.each do |role|
     %tr{:class => cycle("even", "odd")}
