--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,20 +1,41 @@
+:javascript
+  $(document).ready(function() {
+    $('#newtasklink').click(function() {
+      $('#tasknewform').show();
+      $('#tasklink').hide();
+      return false;
+    })
+    
+    $('#hidelink').click(function() {
+      $('#tasknewform').hide();
+      $('#tasklink').show();
+      return false;
+    })
+  })
+
 - form_tag project_tasks_path, :method => :get do
   #sidebar.left
     = render :partial => "layouts/logo_box"
-    %h1 Filter tasks
+    %h1 Filter
     = render :partial => "shared/learnmore"
     #simple_search{:style => params[:search].is_a?(Hash) ? "display:none" : "" }
       = text_field_tag "search", params[:search], :size => 27, :autocomplete => "off"
     %br  
     = filter_html("tasks_index")
+    = render :partial => 'exportcsv'
 
 #content.right
   = render :partial => "layouts/header"
   - if !@archieved
-    #task
+    #tasklink
+      %small_text
+        .right
+          =link_to "New Task", "#", :id => :newtasklink
+    #tasknewform{:style => "display:none" }
       = render :partial => 'new'
-  %br
-  %br
+      %small_text
+        .right
+          =link_to "Hide", "#", :id => :hidelink
   %table.index
     %tr
       %td.top
