--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -465,13 +465,14 @@ span.gray {
     text-decoration: none; }
 
 #sidebar {
-  width: 20%; }
+  width: 19%;
+  padding-right: 10px; }
   #sidebar h1 {
-    background-color: #E1EEFA;
-    color: #787D7B;
+    background-color: #FAFAF7;
+    color: #4F4930;
     text-align: center;
     padding: 5px;
-    font-size: 1.5em;
+    font-size: 1.25em;
     line-height: 1; }
   #sidebar .home {
     padding: 5px; }
@@ -482,11 +483,11 @@ span.gray {
       text-decoration: none;
       color: #636162; }
   #sidebar .home.current {
-    background-color: #fff; }
+    background-color: #295E80; }
     #sidebar .home.current a {
       text-decoration: none;
       font-weight: bold;
-      color: #FF5900; }
+      color: white; }
   #sidebar .projects .project {
     padding: 5px; }
     #sidebar .projects .project a {
@@ -526,26 +527,26 @@ span.gray {
   float: right;
   padding: 10px 2%;
   background-color: white;
-  box-shadow: 0px 0px 6px #A8A6A0;
-  -moz-box-shadow: 0px 0px 6px #A8A6A0;
-  -webkit-box-shadow: 0px 0px 6px #A8A6A0;
+  box-shadow: 0px 0px 14px #A8A6A0;
+  -moz-box-shadow: 0px 0px 14px #A8A6A0;
+  -webkit-box-shadow: 0px 0px 14px #A8A6A0;
   border-radius: 4px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px; }
   #content h1 {
-    background-color: #D6FFE0;
-    color: black;
+    background-color: #295E80;
+    color: white;
     text-align: center;
     padding: 15px;
     line-height: 1; }
   #content .menu a {
-    padding: 2px 10px 2px 10px; }
+    padding: 5px 10px 5px 10px; }
   #content .menu a.current {
-    padding: 2px 10px 2px 10px;
+    padding: 5px 10px 5px 10px;
     text-decoration: none;
-    font-weight: bold;
+    background-color: #295E80;
     color: white;
-    background-color: #FF5900; }
+    font-weight: bold; }
 
 .left {
   float: left; }
@@ -827,3 +828,33 @@ content2 {
     width: 97%;
     background-color: #DFE3DE;
     padding: 5px 3px 5px 0px; }
+
+#expenses {
+  padding-top: 10px; }
+  #expenses .header {
+    background-color: #eee; }
+  #expenses .expense .expense-description, #expenses .header .expense-description {
+    float: left; }
+  #expenses .expense .expense-amounts, #expenses .header .expense-amounts {
+    float: left;
+    width: 100px; }
+  #expenses .expense .expense-date, #expenses .header .expense-date {
+    float: left;
+    width: 100px; }
+  #expenses .expense .expense-actions, #expenses .header .expense-actions {
+    float: right;
+    width: 20px; }
+  #expenses .expense .expenselogs .expenselog {
+    float: right; }
+    #expenses .expense .expenselogs .expenselog .expenselog-amounts {
+      float: left;
+      width: 100px; }
+    #expenses .expense .expenselogs .expenselog .expenselog-date {
+      float: left;
+      width: 100px; }
+    #expenses .expense .expenselogs .expenselog .expenselog-actions {
+      float: right;
+      width: 20px; }
+
+#new_expenselog #expenselog_expense_description {
+  width: 250px; }
