--- a/public/stylesheets/sass/_default.sass
+++ b/public/stylesheets/sass/_default.sass
@@ -113,13 +113,14 @@ span.gray
     text-decoration: none
   
 #sidebar
-  width: 20%
+  width: 19%
+  padding-right: 10px
   h1
-    background-color: #E1EEFA
-    color: #787D7B
+    background-color: #FAFAF7
+    color: #4F4930
     text-align: center
     padding: 5px
-    font-size: 1.5em
+    font-size: 1.25em
     line-height: 1
   .home
     padding: 5px
@@ -130,11 +131,11 @@ span.gray
       text-decoration: none
       color: #636162
   .home.current
-    background-color: #fff
+    background-color: #295E80
     a
       text-decoration: none
       font-weight: bold
-      color: #FF5900
+      color: white
   .projects
     .project
       padding: 5px
@@ -177,23 +178,23 @@ span.gray
   float: right
   padding: 10px 2%
   background-color: white
-  +box-shadow("0px 0px 6px #A8A6A0")
+  +box-shadow("0px 0px 14px #A8A6A0")
   +border-radius("4px")
   h1
-    background-color: #D6FFE0
-    color: black
+    background-color: #295E80
+    color: white
     text-align: center
-    padding: 15px
+    padding: 15px 
     line-height: 1
   .menu
     a
-      padding: 2px 10px 2px 10px
+      padding: 5px 10px 5px 10px     
     a.current
-      padding: 2px 10px 2px 10px
+      padding: 5px 10px 5px 10px
       text-decoration: none
-      font-weight: bold
+      background-color: #295E80
       color: white
-      background-color: #FF5900
+      font-weight: bold
 
 .left
   float: left
