--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -20,5 +20,15 @@
       %br
     - else 
       = f.input :use_ssl, :label => "Enable SSL security"
+    Currency
+    - if @project.is_archieved?
+      %br
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      = @project.currency
+      %br
+      %br
+    - else 
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      = f.collection_select :currency_code, Country.all, :currency_code, :currency_todisp
   - f.buttons do
     = f.commit_button "Update Project"
