--- a/app/views/alerts/_list.html.haml
+++ b/app/views/alerts/_list.html.haml
@@ -21,5 +21,5 @@
         = truncate a.creator.to_s, :limit => 15, :omission => "..."
       %td
         %span.lightgray
-          = smart_date(a.updated_at)
+          = time_ago_in_words(a.updated_at)
 .clear
