--- a/app/views/expenselogs/_form.html.haml
+++ b/app/views/expenselogs/_form.html.haml
@@ -7,5 +7,5 @@
       = f.input :date, :as => :string, :input_html => {:class => "datepicker"}
       = f.input :amount
     - f.buttons do
-      = f.commit_button "Log time"
+      = f.commit_button "Log expense"
 .clear
