--- a/app/views/expenses/_exportcsv.html.haml
+++ b/app/views/expenses/_exportcsv.html.haml
@@ -22,10 +22,10 @@
       =link_to "Learn More", "#", :id => :donotlearnmorelinke
 #learnmoree{:style => "display:none" }
   .gray
-    Tasks when exported will be saved in a file called tasks.csv. This file can then be opened in a spreadsheet program (e.g. Microsoft Excel).
+    Expenses when exported will be saved in a file called expensess.csv. This file can then be opened in a spreadsheet program (e.g. Microsoft Excel).
     %br
     %small_text
       .right
         =link_to "Hide", "#", :id => :learnmorelinke
 %br
-= link_to 'Export tasks', :controller => 'tasks', :action=> 'export_csv', :popup => :true
+= link_to 'Export tasks', :controller => 'expenses', :action=> 'export_csv', :popup => :true
