--- a/app/views/layouts/onebox_layout.html.haml
+++ b/app/views/layouts/onebox_layout.html.haml
@@ -7,6 +7,7 @@
     = javascript_include_tag 'jquery-1.4.2.min', 'jquery-ui-1.7.2.custom.min', 'jquery.colorbox-min', 'jquery.autocomplete.pack', 'jquery.validate.pack', 'application', :cache => "base"
     
   %body
+    <LINK REL="SHORTCUT ICON" HREF="/images/websitelogo.png">  
     / #preloader{:style => "display:none"}
     /   #preloader-spinner
     /     %img{:src => "#{root_url}/images/spinner.gif"}
