--- a/public/stylesheets/sass/_default.sass
+++ b/public/stylesheets/sass/_default.sass
@@ -16,6 +16,14 @@ body
   font-family: 'Lucida Grande', Verdana, Arial, Tahoma, Helvetica
   font-size: 0.75em
 
+chartPanel
+  margin: 0
+  padding: 0
+  
+dashChart
+  margin: 0
+  padding: 0
+
 h1, h2, h3, h4, h5, h6
   font-weight: normal
   color: #111
