--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,7 +4,7 @@
 
 = render :partial => "events/upcoming", :locals => {:events => @user.events}
 
-- invites = @user.project_invitations.confirmed_eq(false)
+- invites = @user.project_invitations.where(:confirmed => :false)
 
 - if logged_in? && invites.size > 0
   %h3 Incoming Project Invitations
