--- a/app/views/events/_add_form.html.haml
+++ b/app/views/events/_add_form.html.haml
@@ -41,9 +41,9 @@
     $('#event_all_day').change();
   })
 
-- semantic_form_for [@calendarable, event], :live_validations => true, :html => {:class => "stack"} do |f|
+= semantic_form_for [@calendarable, event], :live_validations => true, :html => {:class => "stack"} do |f|
   = error_messages_for :event
-  - f.inputs do
+  = f.inputs do
     = f.input :summary, :label => "Subject"
     = f.input :location, :label => "Where?"
     = f.input :start_at_date, :as => :string, :label => "What date?", :input_html => {:value => event.start_at.to_date, :class => "datepicker"}
@@ -53,7 +53,7 @@
     Repeat the event?
     = f.input :repeat_frequency, :as => :select, :collection => EventSeries::RECURRING_TYPES, :label => false, :include_blank => "No repeat"
     = f.input :on_wdays, :as => :check_boxes, :collection => EventSeries::WDAYS, :checked => event.on_wdays, :label => "Days"
-  - f.inputs nil, :class => :repeat_until do
+  = f.inputs nil, :class => :repeat_until do
     = f.input :repeat_until, :as => :select, :collection => EventSeries::UNTIL_TYPES, :include_blank => false
     = f.input :repeat_until_date, :as => :string, :label => "Until Date", :input_html => {:class => "datepicker"}
     = f.input :repeat_until_count, :label => "Until Count"
