--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -19,7 +19,8 @@
   %br
   = render :partial => "assets/diskusage"
 %br
-= render :partial => "timesheets/graph", :locals => {:tims => @project.timesheets}
+-#= render :partial => "timesheets/graph", :locals => {:tims => @project.timesheets}
+Pie Chart Will Come Here
 %br
 = render :partial => "events/upcoming", :locals => {:events => @project.events}
 %br
